--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "node build.js",
+    "build": "node build.mjs",
     "start": "node build.mjs && node --env-file=.env dist/index.js",
     "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node build.mjs watch\""
   },
